@@ -1,3 +1,8 @@
+2019-11-06  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	PR tree-optimization/92317
+	* gcc/testsuite/g++.dg/opt/pr92317.C: New test.
+
 2019-11-06  Gergö Barany  <gergo@codesourcery.com>
 	    Frederik Harwath  <frederik@codesourcery.com>
 	    Thomas Schwinge  <thomas@codesourcery.com>
